# anomalib-onnxruntime-cpp

./: CMakeLists.txt  README.md  inference.hpp  main.cpp  opencv_utils.cpp  opencv_utils.h  test.cpp  utils.cpp
cmake/: .gitignore  CMakeLists.txt  inference.hpp  main.cpp  opencv_utils.h  test.cpp  utils.h
temp/: onnxruntime1.cpp  onnxruntime2.cpp
vs/: .gitignore  inference.hpp  main.cpp  opencv_utils.cpp  opencv_utils.h  utils.cpp  utils.h  vs.sln  vs.vcxproj  vs.vcxproj.filters
